# hydraulic-telemetry-embedded

./: Cargo.toml  README.md  avr-attiny85.json  runner.ps1  runner.sh
.VSCodeCounter/2023-10-15_09-37-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
attiny/: Cargo.toml
attiny/src/: i2c.rs  i2c_adc.rs  main.rs  wire.rs
esp/: Cargo.toml
esp/src/: i2c_adc.rs  int_adc.rs  main.rs  out_control.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: charger.rs  charger_sepic.rs  device_state.rs  digital_input.rs  i2c_adc.rs  int_adc.rs  led_output.rs  main.rs  mqtt.rs  mqtt_publish.rs  pressure_boost.rs  pulse_counter.rs  state_publish.rs  temperature.rs  wifi.rs
