[package]
name = "esp"
version = "0.1.0"
edition = "2021"

[dependencies]
# esp-hal-common = { version = "0.12.0", features = ["esp32", "embassy-time-timg0"] }
hal = { package = "esp32-hal", version = "0.15.0", features = ["async", "embassy-time-timg0", "embassy-executor-thread"] }
esp-backtrace = { version = "0.8.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.6.0", features = ["esp32"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
    "esp32",
    "embedded-svc",
    "wifi",
    "async",
    "embassy-net",
    "wifi-logs",
    "dump-packets",
] }
embedded-hal = "0.2.7"
embedded-svc = { version = "0.25.3", default-features = false }
nb = "1.1.0"
# embedded-io = "0.4.0"
heapless = "0.7.16"
embassy-net = { version = "0.1.0", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-executor   = { version = "0.3.0", features = ["nightly"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
mqttrs = { version = "0.4.1", default-features = false }
dotenvy_macro = "0.15.7"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
embassy-sync = "0.3.0"
ads1x1x = "0.2.2"
strum = { version = "0.25.0", default-features = false, features = ["derive"] }

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3
debug = true

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
