[package]
name = "esp"
version = "0.1.0"
edition = "2021"

[dependencies]
hal = { package = "esp32-hal", version = "0.15.0" }
esp-backtrace = { version = "0.8.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.6.0", features = ["esp32"] }
esp-storage = { version = "0.3.0", features = ["esp32"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
    "esp32",
    "embedded-svc",
    "wifi",
    "ps-max-modem",
] }
smoltcp = { version = "0.10.0", default-features = false }
embedded-storage = "0.3.0"
embedded-svc = { version = "0.25.3", default-features = false }
nb = "1.1.0"
mqttrs = { version = "0.4.1", default-features = false }
dotenvy_macro = "0.15.7"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
ads1x1x = "0.2.2"
desse = "0.2.1"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
opt-level = 3

[profile.dev]
# Explicitly disable LTO which the Xtensa codegen backend has issues
lto = "off"
