cargo-features = ["per-package-target"]

[package]
name = "attiny"
version = "0.1.0"
edition = "2021"
forced-target = "avr-attiny85.json"

[[bin]]
name = "attiny"
test = false
bench = false

[dependencies]
avr-device.workspace = true
embedded-hal.workspace = true
panic-halt.workspace = true
attiny-hal.workspace = true
