cargo-features = ["per-package-target"]

[package]
name = "esp"
version = "0.1.0"
edition = "2021"
forced-target = "riscv32imc-unknown-none-elf"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.11.0", features = [
    "async",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
    "esp32c3",
    "embedded-svc",
    "wifi",
    "async",
    "embassy-net",
    "wifi-logs",
    "dump-packets",
    # "utils",
    # "enumset",
], rev = "6b53683586e29bcec7af23309d788fed4fb49f2c" }
# smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.3", default-features = false }
# log = "0.4.16"
nb = "1.1.0"
# embedded-hal = "0.2.3"
# embedded-io = "0.4.0"
heapless = "0.7.16"
embassy-net = { version = "0.1.0", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-executor = { version = "0.2.0", package = "embassy-executor", features = [
    "nightly",
    "executor-thread",
    "integrated-timers",
    "arch-riscv32",
] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
mqttrs = { version = "0.4.1", default-features = false }
dotenvy_macro = "0.15.7"
strum = { version = "0.25.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
ads1x1x = "0.2.2"
