cargo-features = ["per-package-target"]

[package]
name = "esp"
version = "0.1.0"
edition = "2021"
forced-target = "riscv32imc-unknown-none-elf"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0", features = [
    "async",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.8.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [
    "esp32c3",
    "embedded-svc",
    "wifi",
    "async",
    "embassy-net",
    "wifi-logs",
    "dump-packets",
    # "utils",
    # "enumset",
] }
embedded-svc = { version = "0.25.3", default-features = false }
# log = "0.4.16"
nb.workspace = true
embedded-hal.workspace = true
# embedded-io = "0.4.0"
heapless = "0.7.16"
embassy-net = { version = "0.1.0", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-executor = { version = "0.3.0", package = "embassy-executor", features = [
    "nightly",
    "executor-thread",
    "integrated-timers",
    "arch-riscv32",
] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
mqttrs = { version = "0.4.1", default-features = false }
dotenvy_macro = "0.15.7"
strum.workspace = true
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"
ads1x1x.workspace = true
